--- a/app/src/main/res/layout/fragment_create_note.xml
+++ b/app/src/main/res/layout/fragment_create_note.xml
@@ -15,34 +15,6 @@
 
 
 
-		<EditText
-			android:id="@+id/edtTitle"
-			android:layout_width="match_parent"
-			android:layout_height="50dp"
-			android:layout_margin="10dp"
-			android:hint="Enter Title"
-			android:inputType="textPersonName"
-			android:textSize="20sp"
-			app:layout_constraintBottom_toTopOf="@id/edtBody"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toTopOf="parent" />
-
-		<EditText
-			android:id="@+id/edtBody"
-			android:layout_width="0dp"
-			android:layout_height="0dp"
-			android:layout_margin="10dp"
-			android:background="#F8F6F6"
-			android:gravity="top|start"
-			android:hint="Enter Note"
-			android:inputType="textMultiLine"
-			android:padding="10dp"
-			android:textSize="15sp"
-			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toBottomOf="@id/edtTitle" />
 
 		<TextView
 			android:layout_width="wrap_content"
@@ -61,16 +33,74 @@
 			android:layout_height="wrap_content"
 			android:layout_marginEnd="20dp"
 			android:layout_marginBottom="100dp"
+			app:backgroundTint="@color/textbcg"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent" />
 
+<!--		<com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--			android:id="@+id/saveFab"-->
+<!--			android:layout_width="wrap_content"-->
+<!--			android:layout_height="wrap_content"-->
+<!--			android:layout_marginEnd="20dp"-->
+<!--			android:layout_marginBottom="20dp"-->
+<!--			android:backgroundTint="#F8D0D0"-->
+<!--			android:src="@drawable/baseline_done_24"-->
+<!--			app:layout_constraintBottom_toBottomOf="parent"-->
+<!--			app:layout_constraintEnd_toEndOf="parent"-->
+<!--			app:rippleColor="#C54D4D" />-->
 		<com.google.android.material.floatingactionbutton.FloatingActionButton
 			android:id="@+id/saveFab"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginEnd="20dp"
 			android:layout_marginBottom="20dp"
+			android:src="@drawable/baseline_done_24"
+			android:backgroundTint="@color/textbcg"
 			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintEnd_toEndOf="parent" />
+			app:layout_constraintEnd_toEndOf="parent"/>
+
+		<ScrollView
+			android:layout_width="0dp"
+			android:layout_height="0dp"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent">
+
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:orientation="vertical">
+
+				<EditText
+					android:id="@+id/edtTitle"
+					android:layout_width="match_parent"
+					android:layout_height="50dp"
+					android:layout_marginStart="10dp"
+					android:layout_marginTop="10dp"
+					android:layout_marginEnd="10dp"
+					android:background="@drawable/title_bcg"
+					android:hint="Enter Title"
+					android:inputType="textPersonName"
+					android:paddingHorizontal="10dp"
+					android:textSize="20sp"
+					app:layout_constraintEnd_toEndOf="parent"
+					app:layout_constraintStart_toStartOf="parent"
+					app:layout_constraintTop_toTopOf="parent" />
+
+				<EditText
+					android:id="@+id/edtBody"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_margin="@dimen/text_layout_margin"
+					android:background="@drawable/text_bcg"
+					android:gravity="top|start"
+					android:hint="Enter Note"
+					android:minHeight="600dp"
+					android:inputType="textMultiLine"
+					android:padding="10dp"
+					android:textSize="15sp" />
+			</LinearLayout>
+		</ScrollView>
 	</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
