--- a/app/src/main/res/layout/fragment_edit_note.xml
+++ b/app/src/main/res/layout/fragment_edit_note.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
-	xmlns:app="http://schemas.android.com/apk/res-auto">
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools">
 
 	<data>
 
@@ -13,17 +13,7 @@
 		android:orientation="vertical"
 		tools:context=".ui.fragment.editnotefrag">
 
-<!--		<include layout="@layout/fragment_create_note"/>-->
-
-
-
-
-
-
-
-
-
-
+		<!--		<include layout="@layout/fragment_create_note"/>-->
 
 
 		<EditText
