--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,6 +19,8 @@
 			android:layout_height="wrap_content"
 			android:layout_marginEnd="20dp"
 			android:layout_marginBottom="20dp"
+			android:backgroundTint="@color/colorPrimary"
+			android:src="@drawable/baseline_add_24"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent" />
 
@@ -26,13 +28,15 @@
 			android:id="@+id/rcyViewHome"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
+			android:layout_margin="10dp"
+			android:clipToPadding="false"
 			app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintHorizontal_bias="1.0"
 			app:layout_constraintStart_toStartOf="parent"
-			android:layout_margin="10dp"
-			android:clipToPadding="false"
-			app:layout_constraintTop_toTopOf="parent" />
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintVertical_bias="0.473" />
 
 
 	</androidx.constraintlayout.widget.ConstraintLayout>
