--- a/app/src/main/res/menu/editscrn.xml
+++ b/app/src/main/res/menu/editscrn.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-	<item android:id="@+id/file"
-		android:title="file" >
+	<item
+		android:id="@+id/file"
+		android:title="file">
 		<!-- "file" submenu -->
 		<menu>
-			<item android:id="@+id/create_new"
+			<item
+				android:id="@+id/create_new"
 				android:title="create_new" />
-			<item android:id="@+id/open"
+			<item
+				android:id="@+id/open"
 				android:title="open" />
 		</menu>
 	</item>
