--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,12 +7,12 @@
 
 	<fragment
 		android:id="@+id/homeFrag"
-		android:name="com.example.notesapp.ui.fragment.HomeFrag"
+		android:name="com.zsank.tetranote.ui.fragment.HomeFrag"
 		android:label="fragment_home"
-		tools:layout="@layout/fragment_home" >
+		tools:layout="@layout/fragment_home">
 		<action
 			android:id="@+id/action_homeFrag_to_editNoteFrag"
-			app:destination="@id/editNoteFrag" >
+			app:destination="@id/editNoteFrag">
 			<argument
 				android:name="NoteId"
 				android:defaultValue="0" />
@@ -23,22 +23,22 @@
 	</fragment>
 	<fragment
 		android:id="@+id/editNoteFrag"
-		android:name="com.example.notesapp.ui.fragment.EditNoteFrag"
+		android:name="com.zsank.tetranote.ui.fragment.EditNoteFrag"
 		android:label="fragment_edit_note"
-		tools:layout="@layout/fragment_edit_note" >
+		tools:layout="@layout/fragment_edit_note">
 		<action
 			android:id="@+id/action_editNoteFrag_to_homeFrag"
 			app:destination="@id/homeFrag" />
 		<argument
 			android:name="NoteId"
-			app:argType="integer"
-			android:defaultValue="0" />
+			android:defaultValue="0"
+			app:argType="integer" />
 	</fragment>
 	<fragment
 		android:id="@+id/createNoteFrag"
-		android:name="com.example.notesapp.ui.fragment.CreateNoteFragment"
+		android:name="com.zsank.tetranote.ui.fragment.CreateNoteFragment"
 		android:label="fragment_create_note"
-		tools:layout="@layout/fragment_create_note" >
+		tools:layout="@layout/fragment_create_note">
 		<action
 			android:id="@+id/action_createNoteFrag_to_homeFrag"
 			app:destination="@id/homeFrag" />
