--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<color name="purple_200">#FFBB86FC</color>
+	<color name="color">#FFBB86FC</color>
 	<color name="purple_500">#FF6200EE</color>
 	<color name="purple_700">#FF3700B3</color>
-	<color name="teal_200">#FF03DAC5</color>
+	<color name="teal_200">#707373</color>
 	<color name="teal_700">#FF018786</color>
 	<color name="black">#FF000000</color>
 	<color name="white">#FFFFFFFF</color>
+
+	<color name="colorPrimary">#D13352</color>
+	<color name="colorPrimaryDark">#A60E0E</color>
+	<color name="ascent">#E32525</color>
+	<color name="textbcg">#F2F8EEEE</color>
 </resources>
