updated UI --2 (fragHome, fragEdit)

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,6 +9,7 @@
 
 	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width="match_parent"
+		android:background="@color/frag_bkg"
 		android:layout_height="match_parent"
 		android:orientation="vertical"
 		tools:context=".ui.fragment.HomeFrag">
@@ -19,7 +20,6 @@
 			android:layout_height="wrap_content"
 			android:layout_marginEnd="20dp"
 			android:layout_marginBottom="20dp"
-			android:backgroundTint="@color/colorPrimary"
 			android:src="@drawable/baseline_add_24"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent" />
@@ -30,13 +30,12 @@
 			android:layout_height="match_parent"
 			android:layout_margin="10dp"
 			android:clipToPadding="false"
+			tools:listitem="@layout/note_item_home"
 			app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintHorizontal_bias="1.0"
 			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toTopOf="parent"
-			app:layout_constraintVertical_bias="0.473" />
+			app:layout_constraintTop_toTopOf="parent"/>
 
 
 	</androidx.constraintlayout.widget.ConstraintLayout>
