--- a/app/src/main/res/values/splashscreen.xml
+++ b/app/src/main/res/values/splashscreen.xml
@@ -13,6 +13,6 @@
 
 		<!-- Set the theme of the Activity that directly follows your splash screen. -->
 		<!-- Required -->
-		<item name="postSplashScreenTheme">@style/Theme.NotesApp</item>
+		<item name="postSplashScreenTheme">@style/AppTheme</item>
 	</style>
 </resources>
