--- a/app/src/main/res/layout/fragment_create_note.xml
+++ b/app/src/main/res/layout/fragment_create_note.xml
@@ -8,12 +8,12 @@
 	</data>
 
 	<androidx.constraintlayout.widget.ConstraintLayout
+		android:id="@+id/consLayout"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
+		android:background="@color/frag_bkg"
 		android:orientation="vertical"
 		tools:context=".ui.fragment.CreateNoteFragment">
-
-
 
 
 		<TextView
@@ -33,21 +33,20 @@
 			android:layout_height="wrap_content"
 			android:layout_marginEnd="20dp"
 			android:layout_marginBottom="100dp"
-			app:backgroundTint="@color/textbcg"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent" />
 
-<!--		<com.google.android.material.floatingactionbutton.FloatingActionButton-->
-<!--			android:id="@+id/saveFab"-->
-<!--			android:layout_width="wrap_content"-->
-<!--			android:layout_height="wrap_content"-->
-<!--			android:layout_marginEnd="20dp"-->
-<!--			android:layout_marginBottom="20dp"-->
-<!--			android:backgroundTint="#F8D0D0"-->
-<!--			android:src="@drawable/baseline_done_24"-->
-<!--			app:layout_constraintBottom_toBottomOf="parent"-->
-<!--			app:layout_constraintEnd_toEndOf="parent"-->
-<!--			app:rippleColor="#C54D4D" />-->
+		<!--		<com.google.android.material.floatingactionbutton.FloatingActionButton-->
+		<!--			android:id="@+id/saveFab"-->
+		<!--			android:layout_width="wrap_content"-->
+		<!--			android:layout_height="wrap_content"-->
+		<!--			android:layout_marginEnd="20dp"-->
+		<!--			android:layout_marginBottom="20dp"-->
+		<!--			android:backgroundTint="#F8D0D0"-->
+		<!--			android:src="@drawable/baseline_done_24"-->
+		<!--			app:layout_constraintBottom_toBottomOf="parent"-->
+		<!--			app:layout_constraintEnd_toEndOf="parent"-->
+		<!--			app:rippleColor="#C54D4D" />-->
 		<com.google.android.material.floatingactionbutton.FloatingActionButton
 			android:id="@+id/saveFab"
 			android:layout_width="wrap_content"
@@ -55,52 +54,64 @@
 			android:layout_marginEnd="20dp"
 			android:layout_marginBottom="20dp"
 			android:src="@drawable/baseline_done_24"
-			android:backgroundTint="@color/textbcg"
 			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"/>
+			app:layout_constraintEnd_toEndOf="parent" />
 
 		<ScrollView
 			android:layout_width="0dp"
-			android:layout_height="0dp"
+			android:layout_height="match_parent"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintTop_toTopOf="parent">
 
-			<LinearLayout
+			<androidx.cardview.widget.CardView
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:orientation="vertical">
+				android:layout_margin="10dp"
+				android:background="#F5F5F5"
+				android:shadowColor="@android:color/transparent"
+				app:cardCornerRadius="15dp"
+				app:cardElevation="0dp">
 
-				<EditText
-					android:id="@+id/edtTitle"
-					android:layout_width="match_parent"
-					android:layout_height="50dp"
-					android:layout_marginStart="10dp"
-					android:layout_marginTop="10dp"
-					android:layout_marginEnd="10dp"
-					android:background="@drawable/title_bcg"
-					android:hint="Enter Title"
-					android:inputType="textPersonName"
-					android:paddingHorizontal="10dp"
-					android:textSize="20sp"
-					app:layout_constraintEnd_toEndOf="parent"
-					app:layout_constraintStart_toStartOf="parent"
-					app:layout_constraintTop_toTopOf="parent" />
-
-				<EditText
-					android:id="@+id/edtBody"
+				<LinearLayout
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:layout_margin="@dimen/text_layout_margin"
-					android:background="@drawable/text_bcg"
-					android:gravity="top|start"
-					android:hint="Enter Note"
-					android:minHeight="600dp"
-					android:inputType="textMultiLine"
-					android:padding="10dp"
-					android:textSize="15sp" />
-			</LinearLayout>
+					android:layout_margin="10dp"
+					android:orientation="vertical">
+
+					<EditText
+						android:id="@+id/edtTitle"
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						android:layout_marginTop="5dp"
+						android:background="@android:color/transparent"
+						android:hint="Enter Title"
+						android:minHeight="50dp"
+						android:textColor="#464646"
+						android:textSize="25sp"
+
+						android:textStyle="bold" />
+
+					<View
+						android:layout_width="match_parent"
+						android:layout_height="1dp"
+						android:layout_marginTop="2dp"
+						android:background="#595959" />
+
+					<EditText
+						android:id="@+id/edtBody"
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						android:layout_marginTop="15dp"
+						android:background="@android:color/transparent"
+						android:gravity="top|start"
+						android:hint="Enter Note"
+						android:inputType="textMultiLine"
+						android:minHeight="600dp"
+						android:textSize="15sp" />
+				</LinearLayout>
+			</androidx.cardview.widget.CardView>
 		</ScrollView>
 	</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
