--- a/app/src/main/res/layout/note_item_home.xml
+++ b/app/src/main/res/layout/note_item_home.xml
@@ -1,44 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools">
 
 	<data>
 
 	</data>
 
-	<LinearLayout
-		android:id="@+id/layout"
+	<androidx.cardview.widget.CardView
 		android:layout_width="match_parent"
 		android:layout_height="@dimen/notehomeitemheight"
-
-		android:orientation="vertical">
+		android:layout_marginBottom="10dp"
+		app:cardBackgroundColor="#FFFFFF"
+		app:cardElevation="3dp">
 
 		<TextView
 			android:id="@+id/title"
 			android:layout_width="match_parent"
-			android:layout_height="45dp"
+			android:layout_height="match_parent"
 			android:layout_marginBottom="5dp"
-			android:background="@drawable/rounded_rectangle"
-
 			android:gravity="center_vertical"
 			android:hint="Untitled"
 			android:padding="10dp"
 			android:textSize="20sp"
-			android:textStyle="bold"
-			tools:text="Title" />
-		<View
-			android:layout_width="match_parent"
-			android:layout_height="1dp"
-			android:background="@color/textbcg"/>
+			tools:text="TITLE" />
+
 		<TextView
 			android:id="@+id/description"
 			android:layout_width="match_parent"
 			android:layout_height="50dp"
-			android:backgroundTint="@color/textbcg"
 			android:hint="BlankBody"
 			android:textSize="15sp"
 			android:visibility="gone"
 			tools:text="Description" />
+	</androidx.cardview.widget.CardView>
+<!--	<LinearLayout-->
+<!--		android:id="@+id/layout"-->
+<!--		android:layout_width="match_parent"-->
+<!--		android:layout_height="@dimen/notehomeitemheight"-->
+<!--		android:layout_marginBottom="10dp"-->
+<!--		android:orientation="vertical">-->
+<!--		-->
+<!--&lt;!&ndash;		<View&ndash;&gt;-->
+<!--&lt;!&ndash;			android:layout_width="match_parent"&ndash;&gt;-->
+<!--&lt;!&ndash;			android:layout_height="1dp"&ndash;&gt;-->
+<!--&lt;!&ndash;			android:visibility="gone"&ndash;&gt;-->
+<!--&lt;!&ndash;			/>&ndash;&gt;-->
 
-	</LinearLayout>
+
+<!--	</LinearLayout>-->
 </layout>
