--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -32,14 +32,14 @@
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintHorizontal_bias="0.5"
 			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toTopOf="parent" >
+			app:layout_constraintTop_toTopOf="parent">
 
 			<TextView
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:text="TETRANOTE"
-				android:textStyle="bold"
-				android:textSize="25sp"/>
+				android:textSize="25sp"
+				android:textStyle="bold" />
 		</com.google.android.material.appbar.MaterialToolbar>
 
 		<androidx.recyclerview.widget.RecyclerView
@@ -54,6 +54,7 @@
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
 			tools:listitem="@layout/note_item_home" />
+
 
 
 	</androidx.constraintlayout.widget.ConstraintLayout>
