--- a/app/src/main/res/values/splashscreen.xml
+++ b/app/src/main/res/values/splashscreen.xml
@@ -7,7 +7,7 @@
 
 		<!-- Use windowSplashScreenAnimatedIcon to add either a drawable or an
 			 animated drawable. One of these is required. -->
-		<item name="windowSplashScreenAnimatedIcon">@drawable/drawing</item>
+		<item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_foreground</item>
 		<!-- Required for animated icons -->
 		<item name="windowSplashScreenAnimationDuration">500</item>
 
