--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,36 +24,45 @@
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent" />
 
-		<com.google.android.material.appbar.MaterialToolbar
-			android:id="@+id/materialToolbar"
+		<LinearLayout
 			android:layout_width="match_parent"
-			android:layout_height="80dp"
-			android:background="@color/md_theme_light_primaryContainer"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintHorizontal_bias="0.5"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toTopOf="parent">
+			android:layout_height="match_parent"
+			android:orientation="vertical">
 
-			<TextView
+<!--			<com.google.android.material.appbar.MaterialToolbar-->
+<!--				android:id="@+id/materialToolbar"-->
+<!--				android:layout_width="match_parent"-->
+<!--				android:layout_height="80dp"-->
+<!--				android:background="@color/md_theme_light_primaryContainer"-->
+<!--				app:layout_constraintEnd_toEndOf="parent"-->
+<!--				app:layout_constraintHorizontal_bias="0.5"-->
+<!--				app:layout_constraintStart_toStartOf="parent"-->
+<!--				app:layout_constraintTop_toTopOf="parent">-->
+
+<!--				<TextView-->
+<!--					android:layout_width="match_parent"-->
+<!--					android:layout_height="wrap_content"-->
+<!--					android:text="TETRANOTE"-->
+<!--					android:textSize="25sp"-->
+<!--					android:textStyle="bold" />-->
+<!--			</com.google.android.material.appbar.MaterialToolbar>-->
+
+			<androidx.recyclerview.widget.RecyclerView
+				android:id="@+id/rcyViewHome"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:text="TETRANOTE"
-				android:textSize="25sp"
-				android:textStyle="bold" />
-		</com.google.android.material.appbar.MaterialToolbar>
+				android:layout_margin="10dp"
+				android:clipToPadding="false"
+				app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
+				tools:listitem="@layout/note_item_home" />
 
-		<androidx.recyclerview.widget.RecyclerView
-			android:id="@+id/rcyViewHome"
-			android:layout_width="match_parent"
-			android:layout_height="0dp"
-			android:layout_margin="10dp"
-			android:clipToPadding="false"
-			app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
-			tools:listitem="@layout/note_item_home" />
+		</LinearLayout>
+
+
 
 
 
