--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -20,6 +20,12 @@
 		<action
 			android:id="@+id/action_homeFrag_to_createNoteFrag"
 			app:destination="@id/createNoteFrag" />
+		<action
+			android:id="@+id/action_homeFrag_to_aboutFrag"
+			app:destination="@id/aboutFrag" />
+		<action
+			android:id="@+id/action_homeFrag_to_settingFragment"
+			app:destination="@id/settingFragment" />
 	</fragment>
 	<fragment
 		android:id="@+id/editNoteFrag"
@@ -28,7 +34,8 @@
 		tools:layout="@layout/fragment_edit_note">
 		<action
 			android:id="@+id/action_editNoteFrag_to_homeFrag"
-			app:destination="@id/homeFrag" />
+			app:destination="@id/homeFrag"
+			app:popUpTo="@id/homeFrag" />
 		<argument
 			android:name="NoteId"
 			android:defaultValue="0"
@@ -41,6 +48,25 @@
 		tools:layout="@layout/fragment_create_note">
 		<action
 			android:id="@+id/action_createNoteFrag_to_homeFrag"
+			app:destination="@id/homeFrag"
+			app:popUpTo="@id/homeFrag" />
+	</fragment>
+	<fragment
+		android:id="@+id/aboutFrag"
+		android:name="com.zsank.tetranote.ui.fragment.AboutFrag"
+		android:label="AboutFrag" >
+		<action
+			android:id="@+id/action_aboutFrag_to_homeFrag"
+			app:destination="@id/homeFrag"
+			app:popUpTo="@id/homeFrag" />
+	</fragment>
+	<fragment
+		android:id="@+id/settingFragment"
+		android:name="com.zsank.tetranote.ui.fragment.SettingFragment"
+		android:label="fragment_setting"
+		tools:layout="@layout/fragment_setting" >
+		<action
+			android:id="@+id/action_settingFragment_to_homeFrag"
 			app:destination="@id/homeFrag" />
 	</fragment>
 </navigation>
