--- a/app/src/main/res/values/splashscreen.xml
+++ b/app/src/main/res/values/splashscreen.xml
@@ -9,10 +9,13 @@
 			 animated drawable. One of these is required. -->
 		<item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_foreground</item>
 		<!-- Required for animated icons -->
-		<item name="windowSplashScreenAnimationDuration">500</item>
+		<item name="windowSplashScreenAnimationDuration">5000</item>
 
 		<!-- Set the theme of the Activity that directly follows your splash screen. -->
 		<!-- Required -->
 		<item name="postSplashScreenTheme">@style/AppTheme</item>
+
+
 	</style>
+<!--	TODO: Change splashscreen duration-->
 </resources>
