Folder Nesting working

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,46 +24,57 @@
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent" />
 
-		<LinearLayout
+		<androidx.core.widget.NestedScrollView
 			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:orientation="vertical">
+			android:layout_height="match_parent">
 
-<!--			<com.google.android.material.appbar.MaterialToolbar-->
-<!--				android:id="@+id/materialToolbar"-->
-<!--				android:layout_width="match_parent"-->
-<!--				android:layout_height="80dp"-->
-<!--				android:background="@color/md_theme_light_primaryContainer"-->
-<!--				app:layout_constraintEnd_toEndOf="parent"-->
-<!--				app:layout_constraintHorizontal_bias="0.5"-->
-<!--				app:layout_constraintStart_toStartOf="parent"-->
-<!--				app:layout_constraintTop_toTopOf="parent">-->
-
-<!--				<TextView-->
-<!--					android:layout_width="match_parent"-->
-<!--					android:layout_height="wrap_content"-->
-<!--					android:text="TETRANOTE"-->
-<!--					android:textSize="25sp"-->
-<!--					android:textStyle="bold" />-->
-<!--			</com.google.android.material.appbar.MaterialToolbar>-->
-
-			<androidx.recyclerview.widget.RecyclerView
-				android:id="@+id/rcyViewHome"
+			<LinearLayout
 				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_margin="10dp"
-				android:clipToPadding="false"
-				app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-				app:layout_constraintBottom_toBottomOf="parent"
-				app:layout_constraintEnd_toEndOf="parent"
-				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
-				tools:listitem="@layout/note_item_home" />
+				android:layout_height="match_parent"
+				android:orientation="vertical"
+				android:padding="10dp">
 
-		</LinearLayout>
+				<!--			<com.google.android.material.appbar.MaterialToolbar-->
+				<!--				android:id="@+id/materialToolbar"-->
+				<!--				android:layout_width="match_parent"-->
+				<!--				android:layout_height="80dp"-->
+				<!--				android:background="@color/md_theme_light_primaryContainer"-->
+				<!--				app:layout_constraintEnd_toEndOf="parent"-->
+				<!--				app:layout_constraintHorizontal_bias="0.5"-->
+				<!--				app:layout_constraintStart_toStartOf="parent"-->
+				<!--				app:layout_constraintTop_toTopOf="parent">-->
 
+				<!--				<TextView-->
+				<!--					android:layout_width="match_parent"-->
+				<!--					android:layout_height="wrap_content"-->
+				<!--					android:text="TETRANOTE"-->
+				<!--					android:textSize="25sp"-->
+				<!--					android:textStyle="bold" />-->
+				<!--			</com.google.android.material.appbar.MaterialToolbar>-->
 
+				<androidx.recyclerview.widget.RecyclerView
+					android:id="@+id/rcyViewFolder"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:clipToPadding="false"
+					app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+					tools:listitem="@layout/folder_item_home"
+					tools:spanCount="5" />
 
+				<androidx.recyclerview.widget.RecyclerView
+					android:id="@+id/rcyViewHome"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:clipToPadding="false"
+					app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+					app:layout_constraintBottom_toBottomOf="parent"
+					app:layout_constraintEnd_toEndOf="parent"
+					app:layout_constraintStart_toStartOf="parent"
+					app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
+					tools:listitem="@layout/note_item_home" />
+
+			</LinearLayout>
+		</androidx.core.widget.NestedScrollView>
 
 
 	</androidx.constraintlayout.widget.ConstraintLayout>
