--- a/app/src/main/res/values/splashscreen.xml
+++ b/app/src/main/res/values/splashscreen.xml
@@ -3,7 +3,7 @@
 
 	<style name="Theme.App.Starting" parent="Theme.SplashScreen">
 		<!-- Set the splash screen background, animated icon, and animation duration. -->
-		<item name="windowSplashScreenBackground">#ECECEC</item>
+		<item name="windowSplashScreenBackground">@color/ic_launcher_background</item>
 
 		<!-- Use windowSplashScreenAnimatedIcon to add either a drawable or an
 			 animated drawable. One of these is required. -->
