--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,24 +13,28 @@
 		android:orientation="vertical"
 		tools:context=".MainActivity">
 
+				<com.google.android.material.appbar.AppBarLayout
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content">
 
-		<com.google.android.material.appbar.MaterialToolbar
-			android:id="@+id/materialToolbar"
-			android:layout_width="match_parent"
-			android:layout_height="?attr/actionBarSize"
-			android:background="@color/md_theme_light_primaryContainer"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintHorizontal_bias="0.5"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toTopOf="parent">
+					<com.google.android.material.appbar.MaterialToolbar
+						android:id="@+id/topAppBar"
+						android:layout_width="match_parent"
+						app:menu="@menu/emptymenu"
+						android:layout_height="?attr/actionBarSize" />
+				</com.google.android.material.appbar.AppBarLayout>
+<!--		<Button-->
+<!--			android:id="@+id/backstackBut"-->
+<!--			android:layout_width="match_parent"-->
+<!--			android:layout_height="20dp"/>-->
 
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:text="TETRANOTE"
-				android:textSize="25sp"
-				android:textStyle="bold" />
-		</com.google.android.material.appbar.MaterialToolbar>
+
+<!--		<androidx.appcompat.widget.Toolbar-->
+<!--			android:id="@+id/topAppBar"-->
+<!--			android:layout_width="match_parent"-->
+<!--			android:background="@color/md_theme_light_primary"-->
+<!--			android:layout_height="?attr/actionBarSize" />-->
+
 		<androidx.fragment.app.FragmentContainerView
 			android:id="@+id/fragmentContainerView"
 			android:name="androidx.navigation.fragment.NavHostFragment"
