--- a/app/src/main/res/layout/fragment_create_note.xml
+++ b/app/src/main/res/layout/fragment_create_note.xml
@@ -11,12 +11,12 @@
 		android:id="@+id/consLayout"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:background="@color/frag_bkg"
 		android:orientation="vertical"
 		tools:context=".ui.fragment.CreateNoteFragment">
 
 
 		<TextView
+			android:visibility="gone"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="EditNoteFragment"
@@ -33,6 +33,7 @@
 			android:layout_height="wrap_content"
 			android:layout_marginEnd="20dp"
 			android:layout_marginBottom="100dp"
+			android:visibility="gone"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent" />
 
@@ -54,6 +55,7 @@
 			android:layout_marginEnd="20dp"
 			android:layout_marginBottom="20dp"
 			android:src="@drawable/baseline_done_24"
+			android:visibility="gone"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent" />
 
@@ -65,55 +67,55 @@
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintTop_toTopOf="parent">
 
-			<androidx.cardview.widget.CardView
+			<LinearLayout
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:layout_margin="10dp"
-				android:background="#F5F5F5"
-				android:shadowColor="@android:color/transparent"
-				app:cardCornerRadius="15dp"
-				app:cardElevation="0dp">
+				android:layout_margin="15dp"
 
-				<LinearLayout
+				android:orientation="vertical">
+
+
+				<EditText
+					android:id="@+id/edtTitle"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:layout_margin="10dp"
-					android:orientation="vertical">
+					android:background="@android:color/transparent"
+					android:hint="Enter Title"
+					android:minHeight="50dp"
+					android:textColor="#464646"
+					android:textSize="25sp"
 
+					android:textStyle="bold" />
 
+				<View
+					android:layout_width="match_parent"
+					android:layout_height="1dp"
+					android:layout_marginTop="2dp"
+					android:background="#595959" />
 
-					<EditText
-						android:id="@+id/edtTitle"
-						android:layout_width="match_parent"
-						android:layout_height="wrap_content"
-						android:layout_marginTop="5dp"
-						android:background="@android:color/transparent"
-						android:hint="Enter Title"
-						android:minHeight="50dp"
-						android:textColor="#464646"
-						android:textSize="25sp"
+				<EditText
+					android:id="@+id/edtBody"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_marginTop="15dp"
+					android:background="@android:color/transparent"
+					android:gravity="top|start"
+					android:hint="Enter Note"
+					android:inputType="textMultiLine"
+					android:minHeight="800dp"
+					android:textSize="15sp" />
+			</LinearLayout>
+<!--			<androidx.cardview.widget.CardView-->
+<!--				android:layout_width="match_parent"-->
+<!--				android:layout_height="wrap_content"-->
+<!--				android:layout_margin="10dp"-->
+<!--				android:background="#F5F5F5"-->
+<!--				android:shadowColor="@android:color/transparent"-->
+<!--				app:cardCornerRadius="15dp"-->
+<!--				app:cardElevation="0dp">-->
 
-						android:textStyle="bold" />
-
-					<View
-						android:layout_width="match_parent"
-						android:layout_height="1dp"
-						android:layout_marginTop="2dp"
-						android:background="#595959" />
-
-					<EditText
-						android:id="@+id/edtBody"
-						android:layout_width="match_parent"
-						android:layout_height="wrap_content"
-						android:layout_marginTop="15dp"
-						android:background="@android:color/transparent"
-						android:gravity="top|start"
-						android:hint="Enter Note"
-						android:inputType="textMultiLine"
-						android:minHeight="600dp"
-						android:textSize="15sp" />
-				</LinearLayout>
-			</androidx.cardview.widget.CardView>
+<!--				-->
+<!--			</androidx.cardview.widget.CardView>-->
 		</ScrollView>
 	</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
