--- a/app/src/main/res/layout/note_item_home.xml
+++ b/app/src/main/res/layout/note_item_home.xml
@@ -7,23 +7,37 @@
 
 	</data>
 
-	<androidx.cardview.widget.CardView
+	<LinearLayout
 		android:layout_width="match_parent"
-		android:layout_height="@dimen/notehomeitemheight"
-		android:layout_marginBottom="10dp"
-		app:cardBackgroundColor="#FFFFFF"
-		app:cardElevation="3dp">
+		android:layout_height="wrap_content"
+		android:orientation="horizontal"
+		android:layout_marginBottom="5dp"
+		android:background="@color/md_theme_light_onPrimary"
+		android:elevation="1dp"
+		android:paddingHorizontal="10dp"
+		android:paddingVertical="10dp"
+		>
 
 		<TextView
 			android:id="@+id/title"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
+			android:layout_width="wrap_content"
+			android:textColor="@color/md_theme_light_onBackground"
+			android:layout_height="wrap_content"
 			android:layout_marginBottom="5dp"
-			android:gravity="center_vertical"
+			android:layout_weight="1"
+			android:ellipsize="end"
 			android:hint="Untitled"
-			android:padding="10dp"
+			android:maxLines="1"
+			android:singleLine="true"
 			android:textSize="20sp"
-			tools:text="TITLE" />
+			tools:text="This is a multiline title, to check whether this is working" />
+
+		<ImageView
+			android:id="@+id/noteMoreOption"
+			android:layout_width="wrap_content"
+			android:layout_height="match_parent"
+			android:src="@drawable/baseline_more_vert_24"
+			app:tint="@color/md_theme_light_primary" />
 
 		<TextView
 			android:id="@+id/description"
@@ -33,20 +47,32 @@
 			android:textSize="15sp"
 			android:visibility="gone"
 			tools:text="Description" />
-	</androidx.cardview.widget.CardView>
-<!--	<LinearLayout-->
-<!--		android:id="@+id/layout"-->
-<!--		android:layout_width="match_parent"-->
-<!--		android:layout_height="@dimen/notehomeitemheight"-->
-<!--		android:layout_marginBottom="10dp"-->
-<!--		android:orientation="vertical">-->
-<!--		-->
-<!--&lt;!&ndash;		<View&ndash;&gt;-->
-<!--&lt;!&ndash;			android:layout_width="match_parent"&ndash;&gt;-->
-<!--&lt;!&ndash;			android:layout_height="1dp"&ndash;&gt;-->
-<!--&lt;!&ndash;			android:visibility="gone"&ndash;&gt;-->
-<!--&lt;!&ndash;			/>&ndash;&gt;-->
+	</LinearLayout>
 
 
-<!--	</LinearLayout>-->
+
+
+	<!--	<androidx.cardview.widget.CardView-->
+	<!--		android:layout_width="match_parent"-->
+	<!--		android:layout_height="@dimen/notehomeitemheight"-->
+	<!--		android:layout_marginBottom="10dp"-->
+	<!--		app:cardElevation="3dp">-->
+
+	<!--		-->
+	<!--	</androidx.cardview.widget.CardView>-->
+	<!--	<LinearLayout-->
+	<!--		android:id="@+id/layout"-->
+	<!--		android:layout_width="match_parent"-->
+	<!--		android:layout_height="@dimen/notehomeitemheight"-->
+	<!--		android:layout_marginBottom="10dp"-->
+	<!--		android:orientation="vertical">-->
+	<!--		-->
+	<!--&lt;!&ndash;		<View&ndash;&gt;-->
+	<!--&lt;!&ndash;			android:layout_width="match_parent"&ndash;&gt;-->
+	<!--&lt;!&ndash;			android:layout_height="1dp"&ndash;&gt;-->
+	<!--&lt;!&ndash;			android:visibility="gone"&ndash;&gt;-->
+	<!--&lt;!&ndash;			/>&ndash;&gt;-->
+
+
+	<!--	</LinearLayout>-->
 </layout>
