--- a/app/src/main/res/layout/note_item_home.xml
+++ b/app/src/main/res/layout/note_item_home.xml
@@ -10,18 +10,16 @@
 	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:orientation="horizontal"
 		android:layout_marginBottom="5dp"
 		android:background="@color/md_theme_light_onPrimary"
 		android:elevation="1dp"
+		android:orientation="horizontal"
 		android:paddingHorizontal="10dp"
-		android:paddingVertical="10dp"
-		>
+		android:paddingVertical="10dp">
 
 		<TextView
 			android:id="@+id/title"
 			android:layout_width="wrap_content"
-			android:textColor="@color/md_theme_light_onBackground"
 			android:layout_height="wrap_content"
 			android:layout_marginBottom="5dp"
 			android:layout_weight="1"
@@ -29,6 +27,7 @@
 			android:hint="Untitled"
 			android:maxLines="1"
 			android:singleLine="true"
+			android:textColor="@color/md_theme_light_onBackground"
 			android:textSize="20sp"
 			tools:text="This is a multiline title, to check whether this is working" />
 
@@ -48,8 +47,6 @@
 			android:visibility="gone"
 			tools:text="Description" />
 	</LinearLayout>
-
-
 
 
 	<!--	<androidx.cardview.widget.CardView-->
