--- a/app/src/main/res/menu/menu_note_home.xml
+++ b/app/src/main/res/menu/menu_note_home.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-<item
-	android:title="Add Note"
-	android:id="@+id/AddNoteMenu"/>
 	<item
-	android:title="About"
-	android:id="@+id/AboutMenu"/>
+		android:id="@+id/AddNoteMenu"
+		android:title="Add Note" />
+	<item
+		android:id="@+id/AboutMenu"
+		android:title="About" />
+	<item
+		android:id="@+id/AddSampleData"
+		android:title="Add sample data" />
 </menu>
